# libkrypto

./: .gitmodules  CMakeLists.txt  README.md
doc/: padding_oracle_attacks.md  structure.md  telehash.md
include/: aes_128_ctr.h  aes_256_cbc.h  crypto.h  dsa160_key.h  rsa160_key.h  sha256_hash.h  sign_key.h  utils.h
include/krypto/: aes_128_ctr.h  aes_256_cbc.h  cipher.h  crypto_box_sign.h  dsa160_key.h  krypto.h  random_nonce.h  rsa160_key.h  sha256_hash.h  sha512_hash.h  sign_key.h  source_nonce.h  stream_cipher_xsalsa20.h  utils.h
lib/: CMakeLists.txt  aes_128_ctr.cpp  aes_256_cbc.cpp  crypto_box_sign.cpp  dsa160_key.cpp  rsa160_key.cpp  sign_key.cpp  stream_cipher_xsalsa20.cpp  utils.cpp
tests/: CMakeLists.txt  test_aes_128_ctr.cpp  test_crypto.cpp
